tests/result/fail/types/in_place_error_t.const.fail.cpp
#include "tim/result/Result.hpp"


int main() { tim::Result<const tim::in_place_error_t, int> r; }
